[gd_scene load_steps=2 format=2]

[ext_resource path="res://hitandhurt/hurtbox.gd" type="Script" id=1]

[node name="hurtbox" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="invin_ended" from="." to="." method="_on_hurtbox_invin_ended"]
[connection signal="invin_start" from="." to="." method="_on_hurtbox_invin_start"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
